--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" herf="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap">
-<link rel="stylesheet" type="text/css" href="../../dev/dist/dev/css/tailspin-all.css">
+<link rel="stylesheet" type="text/css" href="dev/dist/dev/css/tailspin-all.css">
 
 <style>
 	body {
@@ -2039,11 +2039,11 @@
 </ul>
 
 <a class="back-to-top" href="#" title="Back to top">
-	<img src="./images/icon-angle-up-gray.svg" alt="">
+	<img src="images/icon-angle-up-gray.svg" alt="">
 </a>
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script type="text/javascript" src="../dev/dist/dev/js/fill.media.to.container.js"></script>
+<script type="text/javascript" src="dev/dist/dev/js/fill.media.to.container.js"></script>
 <script type="text/javascript">
 
 	// Shake animation
