--- a/index.html
+++ b/index.html
@@ -608,6 +608,120 @@
 
 	<div class="padding-bottom-60"></div>
 
+	<!-- tables -->
+	<section class="padding-top-bottom-30" id="tables">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col">
+					<h4 class="margin-bottom-25" style="color: crimson;">Tables</h4>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-7">
+					<p>Classes for styling tables and table elements. These classes will override <a href="https://getbootstrap.com" target="_blank">Bootstrap</a> table classes.</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-5">
+					<hr class="margin-top-bottom-30">
+				</div>
+				<div class="col-xl-7">
+					<hr class="margin-top-bottom-30">
+					<p><strong>Result</strong></p>
+					<div class="highlight mint">
+						<table class="table table-centered table-white">
+							<thead>
+								<tr>
+									<th>Table head</th>
+									<th>Table head</th>
+									<th>Table head</th>
+									<th>Table head</th>
+									<th>Table head</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+								</tr>
+								<tr>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+								</tr>
+								<tr>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+								</tr>
+								<tr>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+								</tr>
+							</tbody>
+						</table>
+
+						<div class="padding-bottom-30"></div>
+
+						<table class="table table-stripped table-white">
+							<thead>
+								<tr>
+									<th>Table head</th>
+									<th>Table head</th>
+									<th>Table head</th>
+									<th>Table head</th>
+									<th>Table head</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+								</tr>
+								<tr>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+								</tr>
+								<tr>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+								</tr>
+								<tr>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+									<td>Table cell</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<div class="padding-bottom-60"></div>
+
 	<!-- z-index -->
 	<section class="padding-top-bottom-30" id="z-index">
 		<div class="container-fluid">
@@ -2027,6 +2141,7 @@
 	<li><a href="#font-sizes">Font Size</a></li>
 	<li><a href="#margin">Margin</a></li>
 	<li><a href="#padding">Padding</a></li>
+	<li><a href="#tables">Tables</a></li>
 	<li><a href="#z-index">Z-Index</a></li>
 	<li><a href="#border-radius">Border Radius</a></li>
 	<li><a href="#border-color">Borders, Default Border Color, & Circles (Utilities)</a></li>
